[package]
name = "iota-client"
version = "2.0.0-alpha.1"
authors = ["IOTA Stiftung"]
edition = "2021"
rust-version = "1.60"
description = "An experimental client library for interacting with IOTA (a.k.a. the Tangle)"
documentation = "https://wiki.iota.org"
homepage = "https://iota.org"
repository = "https://github.com/lmy441900/atoi.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[dependencies]
async-trait = { version = "0.1.52", default-features = false }
log = { version = "0.4.14", default-features = false }
thiserror = { version = "1.0.30", default-features = false, optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.9.0"
futures = "0.3.21"

[build-dependencies]
cargo-lock = { version = "7.0.1", default-features = false }

[features]
# For the meanings and combinations of features, consult the API documentation.
default = ["std", "async"]

std = ["dep:thiserror"]

client = []
sync = ["client"]
async = ["client", "dep:futures"]

comm = []
http = ["comm"]
mqtt = ["comm"]

signer = []

ffi = []
