[package]
name = "atoi"
version = "0.0.0"
authors = ["Minyong Li <minyong.li@iota.org>"]
edition = "2021"
rust-version = "1.60"
description = "An experimental client library for interacting with IOTA (a.k.a. the Tangle)"
documentation = "https://wiki.iota.org"
homepage = "https://iota.org"
repository = "https://github.com/lmy441900/atoi.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[dependencies]
async-trait = { version = "0.1.52", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
typed-builder = { version = "0.10.0", default-features = false }

[build-dependencies]
cargo-lock = { version = "7.0.1", default-features = false }

[features]
# For the meanings and combinations of features, consult the API documentation.
default = ["sync", "async"]

sync = []
async = []

ffi = []
